Add extra flag for agent